Update Kedhar App Development Studios Privacy Policy.html

--- a/Kedhar App Development Studios Privacy Policy.html
+++ b/Kedhar App Development Studios Privacy Policy.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0048)http://macropinch.com/privacypolicy_weather.html -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
-		<title>MacroPinch Ltd. Privacy Policy</title>
+		<title>KADS. Privacy Policy</title>
 		
 		<style type="text/css">
 			body {
